--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "generate": "^0.13.1",
     "gulp-format-md": "^0.1.11",
     "mocha": "^3.1.2",
+    "moment": "^2.17.1",
     "npm-install-global": "^0.1.2"
   },
   "keywords": [
